2002-01-29  Per Bothner  <per@bothner.com>

	* kawa/repl.java (getInterpreterFromFilenameExtension):  New static.
	(processArgs, main):  Use filename extension to select language.

	* kawa/standard/reequire:  Handle (require 'http).

	* kawa/standard/reequire (scanForDefinitions):  Coerce find call
	to void if we're not actually using it (to prevent it being
	printed when we're compiling with implicit values-append).

2002-01-23  Per Bothner  <per@bothner.com>

	* build.xml:  Add enable-xml flag, to build xml-related classes.
	* build.properties:  Add/document enable-xml.

	* configure.in (AC_OUTPUT):  Also make gnu/kawa/brl/Makefile.

	* kawa/Shell.java (run):  Call Lexer's setInteractive if TtyInPort.

	* kawa/standard/Scheme.java (initScheme):  Define values-append.
	Fix definition of unescaped-data.

	* kawa/lang/Translator.java (makeBody):  New method.
	(rewrite_body, finishModule):  Use makeBody.

2002-01-21  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java:  Also define 'unescaped-data'.

	* acinclude.m4:  New check-in.

2002-01-19  Per Bothner  <per@bothner.com>

	* kawa/lang/CompileFile.java (apply2):  Don't catch and re-throw.

2002-01-13  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (initScheme):  Define response-header.
	* kawa/Shell.java (format):  New static table.
	(setDefaultFormat, getOutputConsumer):  New static methods.
	(run):  New overload taking an output Consumer instead of an OutPort.
	* kawa/repl.java (processArgs):  New method.
	New code to handle "\\" and "--output-format" or "--format".
	(main):  Use processArgs.
	* kawa/standard/load.java (loadSource):  Use getOutputConsumer.
	Wrap body in a beginDocument/endDocument pair.

2002-01-07  Per Bothner  <per@bothner.com>

	* kawa/lang/CompileFile.java (compile_to_files): Do mangleNameIfNeeded.

2001-12-24  James P. White  <jim@pagesmiths.com>

	* kawa/repl.java (main):  Need to increment iArg on -w.

2001-12-24  Per Bothner  <per@bothner.com>
